fix(all): retrieving dumps using the new dump organisation and a correct User Agent